# diagrams

./: .gitignore  CMakeLists.txt  Makefile  README.txt  diagrams.pro  editorinterface.cpp  editorinterface.h  editorinterface.ui  editortab.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/: Doxyfile
examples/: example1.gae  example2.gae  example3.gae
src/: editorinterface.cpp  editorinterface.h  editorinterface.ui  editortab.cpp  editortab.h  editortab.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tabcanvas.cpp  tabcanvas.h
src/MainWIndow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/editor/: editorinterface.cpp  editorinterface.h  editorinterface.ui
src/editor/Backend/: ClassDiagram.cpp  ClassDiagram.h  Parse.cpp  Parse.h  SeqDiagram.cpp  SeqDiagram.h  json.hpp
src/editor/EditorInterface/: editorinterface.cpp  editorinterface.h  editorinterface.ui
src/editor/PropertiesDialog/: propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
src/editor/Tabs/Commands/: Commands.cpp  Commands.h
src/editor/Tabs/Connections/: ClassConnectinos.cpp  ClassConnections.cpp  Connections.h  SequenceConnection.cpp  SequenceConnectionItem.cpp  SequenceConnections.cpp
src/editor/Tabs/DiagramItem/: ClassDiagramItem.cpp  DiagramItem.cpp  DiagramItem.h  SequenceDiagramItem.cpp  SequenceDiagramLifeLine.cpp  SequenceDiagramLifeLine.h
src/editor/Tabs/DiagramItem/Commands/: Commands.cpp  Commands.h
src/editor/Tabs/DiagramItem/Connections/: ClassConnectinos.cpp  Connections.cpp  Connections.h  SequenceConnections.cpp
src/editor/Tabs/DiagramItem/EditorScene/: EditorScene.cpp  EditorScene.h
src/editor/Tabs/DiagramItem/FillItems/: FillItems.cpp  FillItems.h  ObjectParams.cpp  ObjectParams.h
src/editor/Tabs/DiagramItem/SequenceDiagramLifeLine/: SequenceDiagramLifeLine.cpp  SequenceDiagramLifeLine.h
src/editor/Tabs/EditorScene/: EditorScene.cpp  EditorScene.h
src/editor/Tabs/FillItems/: ObjectParams.cpp  ObjectParams.h
src/editor/Tabs/TabCanvas/: ClassCanvas.cpp  SequenceCanvas.cpp  TabCanvas.h
src/editor/Tabs/TabCanvas/ItemsBuffer/: Itemsbuffer.cpp  Itemsbuffer.h
src/editor/Tabs/TabCanvas/SequenceConnectionDialog/: sequenceconnectiondialog.cpp  sequenceconnectiondialog.h  sequenceconnectiondialog.ui
src/editor/backend/: class_diagram.cpp  class_diagram.h  json.hpp  parse.cpp  parse.h  seq_diagram.cpp
src/editor/tabs/: Itemsbuffer.cpp  Itemsbuffer.h  fillItems.cpp  fillItems.h  object.cpp  object.h  tabcanvas.cpp  tabcanvas.h
src/editor/tabs/TabCanvas/: ClassCanvas.cpp  SequenceCanvas.cpp  TabCanvas.h  tabcanvas.cpp
src/editor/tabs/diagram/: Commands.cpp  Commands.h  Connections.cpp  Connections.h  DiagramItem.cpp  DiagramItem.h  Diagrams.cpp  Diagrams.h  EditorScene.cpp  EditorScene.h
test_lexer/: Makefile  class_diagram.cpp  class_diagram.h  ebaca_chochu.cpp  fuck_or_run_me.cpp  main.cpp  parse.cpp  parse.h  seq_diagram.cpp  seq_diagram.h  test.txt  test1.txt  test10.txt  test16.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test8.txt  test9.txt  test_seq1.txt  test_seq2.txt  test_seq3.txt  test_seq4.txt  test_seq5.txt  test_seq6.txt  test_seq7.txt  testim.sh
test_lexer/tests/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test4.txt  test5.txt  test7.txt  test_seq1.txt  test_seq2.txt  test_seq3.txt  test_seq5.txt  test_seq6.txt  test_seq7.txt
